# strusPattern

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  LINKS  README  README.md  TODO  exp.txt
.Attic/: codepages.hpp  findRagel.cmake  ruleMatcherAutomaton.cpp  ruleMatcherAutomaton.hpp  utils.cpp  utils.hpp
.Attic/hyperscan_build/util/: CMakeLists.txt
.Attic/tre_build/: CMakeLists.txt
cmake/: boost.cmake  build_rules.cmake  find_hyperscan.cmake  find_tre.cmake  link_rules.cmake
doc/: doxygen.conf
doc/doxygen/html/: annotated.html  charRegexMatchContextInterface_8hpp.html  charRegexMatchContextInterface_8hpp_source.html  charRegexMatchInstanceInterface_8hpp.html  charRegexMatchInstanceInterface_8hpp_source.html  charRegexMatchInterface_8hpp.html  charRegexMatchInterface_8hpp_source.html  charRegexMatchOptions_8hpp.html  charRegexMatchOptions_8hpp_source.html  classes.html  classstrus_1_1CharRegexMatchContextInterface-members.html  classstrus_1_1CharRegexMatchContextInterface.html  classstrus_1_1CharRegexMatchInstanceInterface-members.html  classstrus_1_1CharRegexMatchInstanceInterface.html  classstrus_1_1CharRegexMatchInterface-members.html  classstrus_1_1CharRegexMatchInterface.html  classstrus_1_1PatternMatchProgramInstanceInterface-members.html  classstrus_1_1PatternMatchProgramInstanceInterface.html  classstrus_1_1PatternMatchProgramInterface-members.html  classstrus_1_1PatternMatchProgramInterface.html  classstrus_1_1TokenMarkup-members.html  classstrus_1_1TokenMarkup.html  classstrus_1_1TokenMarkupContextInterface-members.html  classstrus_1_1TokenMarkupContextInterface.html  classstrus_1_1TokenMarkupInstanceInterface-members.html  classstrus_1_1TokenMarkupInstanceInterface.html  classstrus_1_1TokenMarkup_1_1Attribute-members.html  classstrus_1_1TokenMarkup_1_1Attribute.html  classstrus_1_1TokenPatternMatchContextInterface-members.html  classstrus_1_1TokenPatternMatchContextInterface.html  classstrus_1_1TokenPatternMatchInstanceInterface-members.html  classstrus_1_1TokenPatternMatchInstanceInterface.html  classstrus_1_1TokenPatternMatchInterface-members.html  classstrus_1_1TokenPatternMatchInterface.html  classstrus_1_1stream_1_1CharRegexMatchOptions-members.html  classstrus_1_1stream_1_1CharRegexMatchOptions.html  classstrus_1_1stream_1_1PatternMatchToken-members.html  classstrus_1_1stream_1_1PatternMatchToken.html  classstrus_1_1stream_1_1TokenPatternMatchOptions-members.html  classstrus_1_1stream_1_1TokenPatternMatchOptions.html  (+62 more)
doc/doxygen_include/: strus.md
doc/webpage/: introduction_struspattern.htm  introduction_strusstream.htm  introduction_strusstream.html  perfplot.pg  perfplot.txt  perfplot_orig.txt  stream_presentation.html  stream_processing.html
examples/config/: program1.rul  program2.rul  program3_de.rul
examples/data/: input1.xml  input2.xml  input3_de.xml
include/strus/: charRegexMatchContextInterface.hpp  charRegexMatchInstanceInterface.hpp  charRegexMatchInterface.hpp  patternMatchProgramInstanceInterface.hpp  patternMatchProgramInterface.hpp  streamPatternMatchContextInterface.hpp  streamPatternMatchInstanceInterface.hpp  streamPatternMatchInterface.hpp  streamTermMatchContextInterface.hpp  streamTermMatchInstanceInterface.hpp  streamTermMatchInterface.hpp  tokenMarkupContextInterface.hpp  tokenMarkupInstanceInterface.hpp  tokenMarkupInterface.hpp  tokenPatternMatchContextInterface.hpp  tokenPatternMatchInstanceInterface.hpp  tokenPatternMatchInterface.hpp  versionPattern.hpp  versionPattern.hpp.in
include/strus/lib/: pattern.hpp  stream.hpp
include/strus/stream/: charRegexMatchOptions.hpp  patternMatchResult.hpp  patternMatchResultItem.hpp  patternMatchStatistics.hpp  patternMatchTerm.hpp  patternMatchToken.hpp  tokenPatternMatchOptimizeOptions.hpp  tokenPatternMatchOptions.hpp  tokenPatternMatchResult.hpp  tokenPatternMatchResultItem.hpp  tokenPatternMatchStatistics.hpp
src/: CMakeLists.txt  charRegexMatch.cpp  charRegexMatch.hpp  errorUtils.hpp  hyperscanErrorCode.hpp  internationalization.cpp.in  internationalization.hpp  lexems.cpp  lexems.hpp  libstrus_pattern.cpp  libstrus_stream.cpp  modstrus_analyzer_pattern.cpp  modstrus_analyzer_stream.cpp  oneByteCharMap.cpp  oneByteCharMap.hpp  patternLexer.cpp  patternLexer.hpp  patternMatchProgram.cpp  patternMatchProgram.hpp  patternMatcher.cpp  patternMatcher.hpp  patternMatcherProgram.cpp  patternMatcherProgram.hpp  podStackPoolBase.hpp  podStructArrayBase.hpp  podStructTableBase.hpp  programLoader.hpp  regexExpressions.cpp  regexExpressions.hpp  regexMatcherAutomaton.hpp  resultFormat.cpp  resultFormat.hpp  ruleMatcherAutomaton.cpp  ruleMatcherAutomaton.hpp  streamPatternMatch.cpp  streamPatternMatch.hpp  streamTermMatch.cpp  streamTermMatch.hpp  strusPatternMatch.cpp  strusPatternMatcher.cpp  (+10 more)
src/rulematch/: podStackPoolBase.hpp  podStructArrayBase.hpp  podStructTableBase.hpp  ruleMatcherAutomaton.cpp  ruleMatcherAutomaton.hpp
tests/: CMakeLists.txt
tests/charRegexMatch/: CMakeLists.txt
tests/charRegexMatch/src/: CMakeLists.txt  testCharRegexMatch.cpp
tests/programLoader/: CMakeLists.txt
tests/programLoader/config/: program1.rul
tests/programLoader/data/: input.res  input.txt
tests/programLoader/src/: CMakeLists.txt  testProgramLoader.cpp
tests/randomExpressionTreeMatch/: CMakeLists.txt
tests/randomExpressionTreeMatch/src/: CMakeLists.txt  testRandomExpressionTreeMatch.cpp
tests/randomPatternMatch/: CMakeLists.txt
tests/randomPatternMatch/src/: CMakeLists.txt  (+1 more)
tests/randomTokenPatternMatch/: CMakeLists.txt
tests/randomTokenPatternMatch/src/: CMakeLists.txt  testRandomTokenPatternMatch.cpp
tests/regexTermMatch/: CMakeLists.txt
tests/simplePatternMatch/: CMakeLists.txt
tests/simpleTokenPatternMatch/: CMakeLists.txt
tests/simpleTokenPatternMatch/src/: CMakeLists.txt  testSimpleTokenPatternMatch.cpp
tests/tre/: CMakeLists.txt
tests/utils/: CMakeLists.txt  testUtils.cpp  testUtils.hpp
(+7 files in other folders)
